--- a/RFPDAAPP/wms_erp/src/main/AndroidManifest.xml
+++ b/RFPDAAPP/wms_erp/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.wms_erp">
 
     <application
+        android:name=".application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +19,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.LoginAct"
+            android:theme="@style/AppTheme.NoActionBar.MyTheme"
+            >
+
+        </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
 </manifest>
