--- a/RFPDAAPP/wms_erp/build.gradle
+++ b/RFPDAAPP/wms_erp/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.balysv:material-ripple:1.0.2'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.1'
+    compile 'com.github.bumptech.glide:okhttp-integration:1.4.0'
 }
