--- a/RFPDAAPP/wms_erp/build.gradle
+++ b/RFPDAAPP/wms_erp/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
+
+def dbflow_version = "3.0.0-beta3"
 repositories {
     maven { url "https://jitpack.io" }
     mavenCentral()
@@ -41,4 +44,11 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.lsjwzh.RecyclerViewPager:lib:v1.1.1'
     compile 'com.github.bumptech.glide:okhttp-integration:1.4.0'
+    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
+    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+    compile 'net.zetetic:android-database-sqlcipher:3.5.1'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.flyco.roundview:FlycoRoundView_Lib:1.0.4@aar'
+    compile 'com.flyco.tablayout:FlycoTabLayout_Lib:1.3.4@aar'
 }
