--- a/RFPDAAPP/wms_erp/build.gradle
+++ b/RFPDAAPP/wms_erp/build.gradle
@@ -22,6 +22,11 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField "String","BaseURL","\"http://211.136.156.114:9091/\""
+        }
+        debug {
+            buildConfigField "String", "BaseURL", "\"http://211.136.156.114:8081/\""
+
         }
     }
 }
