--- a/RFPDAAPP/wms_erp/build.gradle
+++ b/RFPDAAPP/wms_erp/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     compile 'com.flyco.roundview:FlycoRoundView_Lib:1.0.4@aar'
     compile 'com.flyco.tablayout:FlycoTabLayout_Lib:1.3.4@aar'
     compile 'com.jaredrummler:animated-svg-view:1.0.0'
+    compile 'com.zhy:okhttputils:2.6.2'
 }
