--- a/RFPDAAPP/wms_erp/build.gradle
+++ b/RFPDAAPP/wms_erp/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 2
-        versionName "1.1"
+        versionName "1.2"
         ndk {
             // 设置支持的 SO 库构架
             abiFilters 'armeabi'// 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
@@ -72,4 +72,5 @@ dependencies {
     compile 'com.jaredrummler:animated-svg-view:1.0.0'
     compile 'com.zhy:okhttputils:2.6.2'
     compile 'com.bugtags.library:bugtags-lib:latest.integration'
+    compile 'com.ashokvarma.android:bottom-navigation-bar:1.3.0'
 }
