--- a/RFPDAAPP/wms_erp/src/main/AndroidManifest.xml
+++ b/RFPDAAPP/wms_erp/src/main/AndroidManifest.xml
@@ -34,9 +34,16 @@
             >
 
         </activity>
+        <meta-data android:value="580d77a4ca87a87ac60004f5" android:name="BUG_HD_SDK_GENERAL_KEY" />
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"></uses-permission>
+
+    <!-- 可选 -->
+    <uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
 
 </manifest>
