--- a/RFPDAAPP/wms_erp/build.gradle
+++ b/RFPDAAPP/wms_erp/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 23
         versionCode 2
-        versionName "1.2"
+        versionName "1.5"
         ndk {
             // 设置支持的 SO 库构架
             abiFilters 'armeabi'// 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
@@ -42,7 +42,7 @@ bugtags {
     mappingUploadEnabled true
 
     //网络跟踪功能配置(企业版)
-    trackingNetworkEnabled true
+//    trackingNetworkEnabled true
 }
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
